<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ydlidar_tmini_driver</name>
  <version>1.0.0</version>
  <description>
    YDLIDAR T-mini Plus için SDK'sız, sıfırdan yazılmış POSIX (termios2) tabanlı
    ROS 2 Humble sürücüsü. YDLIDAR seri protokolünü (0x55 0xAA paket başlığı,
    FSA/LSA açı interpolasyonu) alt seviyede ayrıştırır ve
    sensor_msgs/msg/LaserScan olarak /scan topic'ine yayınlar.
    ika_navigation ile aynı /scan arayüzünü kullanır (drop-in RPLIDAR yerine).
  </description>
  <maintainer email="promerz10@gmail.com">Omer-Metehan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
